--- a/hw9/README
+++ b/hw9/README
@@ -1,1 +1,1 @@
-https://okekelarry.github.io/GUI/hw9/index.html
+This site was built using Github pages. To view, [Click Here](https://okekelarry.github.io/GUI/hw9/index.html).
